Add header markup header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,20 @@
-<h2>Дмитро Кузь</h2>
-<ul>
-    <li>досвід роботи із бандлером проектів Parcel</li>
-    <li>командна взаємодія та робота з Git</li>
-    <li>навик розгалуження та злиття проекту</li>
-</ul>
+<section class="header section">
+    <div class="container">
+        <a href="/index.html" class="logo link">
+            <svg class="logo__icon">
+                <use></use>
+            </svg>
+            <span class="logo__text">Icecream</span>
+        </a>
+        <nav class="nav">
+            <ul class="nav__list list">
+                <li class="nav__item"><a href="" class="nav__link link">Home</a></li>
+                <li class="nav__item"><a href="" class="nav__link link">About us</a></li>
+                <li class="nav__item"><a href="" class="nav__link link">How it’s made?</a></li>
+                <li class="nav__item"><a href="" class="nav__link link">Our products</a></li>
+                <li class="nav__item"><a href="" class="nav__link link">Contact</a></li>
+            </ul>
+        </nav>
+        <button type="button" class="buy-btn">Buy now</button>
+    </div>
+</section>
