--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -1,3 +1,16 @@
 :root {
-  --primary-font-family: "Montserrat", sans-serif;
+  --primary-font-family: 'DM Sans', sans-serif;
+  --accent-font-family: 'Titan One', cursive;
+  --primary-text-color: #907E82;
+  --strong-text-color: #000000;
+  --contrast-text-color: #FFFFFF;
+  --light-accent-text-color: #FFA5BA;
+  --strong-accent-text-color: #D41443;
+  --hero-bg-color: #FFB8CA;
+  --hero-accent-bg-color: #FFA5BA;
+  --contrast-bg-color: #FFF5F6;
+  --ice-cream-bg-color: #FFB8CA;
+  --ice-coffee-bg-color: #F0D1A5;
+  --milkshakes-bg-color: #C2E297;
+
 }
