Add logo and pictures for hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <section class="header section">
     <div class="container">
         <a href="/index.html" class="logo link">
-            <svg class="logo__icon">
-                <use></use>
+            <svg class="logo__icon" width="200" height="90">
+                <use href="../images/logo-ice-cream.svg"></use>
             </svg>
             <span class="logo__text">Icecream</span>
         </a>
